将最低 Java 要求提高到 19, 使用最新虚拟线程功能; ALPHA 版本。